<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingTop="160dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/linearLayout"
          android:gravity="center"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">
      <Button
          android:id="@+id/btn_preamble"
          android:layout_width="350dp"
          android:layout_height="80dp"
          android:text="@string/preamble"
          android:textSize="30sp"
          app:layout_constraintBottom_toTopOf="@+id/btn_parts"/>

      <Button
          android:id="@+id/btn_parts"
          android:layout_width="350dp"
          android:layout_height="80dp"
          android:text="@string/parts"
          android:textSize="30sp"
          app:layout_constraintBottom_toTopOf="@+id/btn_schedules"/>

      <Button
          android:id="@+id/btn_schedules"
          android:layout_width="350dp"
          android:layout_height="80dp"
          android:text="@string/schedules"
          android:textSize="30sp"
          app:layout_constraintBottom_toTopOf="@+id/btn_amendments"/>

      <Button
          android:id="@+id/btn_amendments"
          android:layout_width="350dp"
          android:layout_height="80dp"
          android:text="@string/amendments"
          android:textSize="30sp"
          app:layout_constraintBottom_toBottomOf="@+id/btn_schedules"
          />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>